# EmployeeDirectory

./: .gitignore  CMakeLists.txt
data/: employees.json
data/json/: employees.json
forms/: loginwindow.ui  useredit.ui  userwindow.ui
include/: Database.h  Helpers.h  LoginWindow.h  MainWindow.h  Manager.h  Profile.h  UserEdit.h  UserWindow.h  ui_loginwindow.h  ui_useredit.h  ui_userwindow.h
src/: Database.cpp  Helpers.cpp  LoginWindow.cpp  Manager.cpp  Profile.cpp  UserEdit.cpp  UserWindow.cpp  main.cpp  mainwindow.ui
